// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bordered TableGrid renders properly 1`] = `
<div
  class="table-grid-pf container-fluid bordered"
  id="virtual-table-grid"
>
  <div
    class="table-grid-pf-head row"
  >
    <div
      class="table-grid-pf-column-header text-nowrap active-sort col-md-2 col-sm-4 col-xs-6"
      id="title"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Title
        <span
          aria-hidden="true"
          class="pficon pficon-sort-common-asc table-grid-pf-header-sort-arrow"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-6 col-sm-4 col-xs-6"
      id="description"
    >
      Description
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-2 col-sm-2 hidden-xs"
      id="hosts"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Hosts
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-2 col-sm-2 hidden-xs"
      id="clusters"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Clusters
      </button>
    </div>
  </div>
  <div
    class="table-grid-pf-body"
  >
    <div
      style="overflow: visible; width: 0px;"
    >
      <div>
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid ReactVirtualized__List"
          role="grid"
          style="box-sizing: border-box; direction: ltr; height: auto; position: relative; width: 0px; overflow-x: hidden; overflow-y: auto;"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`TableGrid with Cell select renders properly 1`] = `
<div
  class="table-grid-pf container-fluid bordered"
  id="virtual-table-grid"
>
  <div
    class="table-grid-pf-head row"
  >
    <div
      class="table-grid-pf-column-header text-nowrap active-sort col-md-2 col-sm-4 col-xs-6"
      id="title"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Title
        <span
          aria-hidden="true"
          class="pficon pficon-sort-common-asc table-grid-pf-header-sort-arrow"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-6 col-sm-4 col-xs-6"
      id="description"
    >
      Description
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-2 col-sm-2 hidden-xs"
      id="hosts"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Hosts
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-2 col-sm-2 hidden-xs"
      id="clusters"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Clusters
      </button>
    </div>
  </div>
  <div
    class="table-grid-pf-body"
  >
    <div
      style="overflow: visible; width: 0px;"
    >
      <div>
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid ReactVirtualized__List"
          role="grid"
          style="box-sizing: border-box; direction: ltr; height: auto; position: relative; width: 0px; overflow-x: hidden; overflow-y: auto;"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`TableGrid with Checkbox select and everything selected renders properly 1`] = `
<div
  class="table-grid-pf container-fluid bordered"
  id="virtual-table-grid"
>
  <div
    class="table-grid-pf-head row"
  >
    <div
      class="table-grid-pf-checkbox"
    >
      <button
        aria-label="Click to deselect all"
        class="btn btn-link"
        type="button"
      >
        <span
          aria-hidden="true"
          class="fa fa-check-square"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap active-sort col-md-2 col-sm-4 col-xs-6"
      id="title"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Title
        <span
          aria-hidden="true"
          class="pficon pficon-sort-common-asc table-grid-pf-header-sort-arrow"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-6 col-sm-4 col-xs-6"
      id="description"
    >
      Description
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-2 col-sm-2 hidden-xs"
      id="hosts"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Hosts
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-2 col-sm-2 hidden-xs"
      id="clusters"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Clusters
      </button>
    </div>
  </div>
  <div
    class="table-grid-pf-body"
  >
    <div
      style="overflow: visible; width: 0px;"
    >
      <div>
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid ReactVirtualized__List"
          role="grid"
          style="box-sizing: border-box; direction: ltr; height: auto; position: relative; width: 0px; overflow-x: hidden; overflow-y: auto;"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`TableGrid with Checkbox select and no selections renders properly 1`] = `
<div
  class="table-grid-pf container-fluid bordered"
  id="virtual-table-grid"
>
  <div
    class="table-grid-pf-head row"
  >
    <div
      class="table-grid-pf-checkbox"
    >
      <button
        aria-label="Click to select all"
        class="btn btn-link"
        type="button"
      >
        <span
          aria-hidden="true"
          class="fa fa-square-o"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap active-sort col-md-2 col-sm-4 col-xs-6"
      id="title"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Title
        <span
          aria-hidden="true"
          class="pficon pficon-sort-common-asc table-grid-pf-header-sort-arrow"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-6 col-sm-4 col-xs-6"
      id="description"
    >
      Description
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-2 col-sm-2 hidden-xs"
      id="hosts"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Hosts
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-2 col-sm-2 hidden-xs"
      id="clusters"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Clusters
      </button>
    </div>
  </div>
  <div
    class="table-grid-pf-body"
  >
    <div
      style="overflow: visible; width: 0px;"
    >
      <div>
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid ReactVirtualized__List"
          role="grid"
          style="box-sizing: border-box; direction: ltr; height: auto; position: relative; width: 0px; overflow-x: hidden; overflow-y: auto;"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`TableGrid with Checkbox select and partial selections renders properly 1`] = `
<div
  class="table-grid-pf container-fluid bordered"
  id="virtual-table-grid"
>
  <div
    class="table-grid-pf-head row"
  >
    <div
      class="table-grid-pf-checkbox"
    >
      <button
        aria-label="Click to deselect all"
        class="btn btn-link"
        type="button"
      >
        <span
          aria-hidden="true"
          class="fa fa-minus-square"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap active-sort col-md-2 col-sm-4 col-xs-6"
      id="title"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Title
        <span
          aria-hidden="true"
          class="pficon pficon-sort-common-asc table-grid-pf-header-sort-arrow"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-6 col-sm-4 col-xs-6"
      id="description"
    >
      Description
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-2 col-sm-2 hidden-xs"
      id="hosts"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Hosts
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-2 col-sm-2 hidden-xs"
      id="clusters"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Clusters
      </button>
    </div>
  </div>
  <div
    class="table-grid-pf-body"
  >
    <div
      style="overflow: visible; width: 0px;"
    >
      <div>
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid ReactVirtualized__List"
          role="grid"
          style="box-sizing: border-box; direction: ltr; height: auto; position: relative; width: 0px; overflow-x: hidden; overflow-y: auto;"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`TableGrid with Row select renders properly 1`] = `
<div
  class="table-grid-pf container-fluid bordered"
  id="virtual-table-grid"
>
  <div
    class="table-grid-pf-head row"
  >
    <div
      class="table-grid-pf-column-header text-nowrap active-sort col-md-2 col-sm-4 col-xs-6"
      id="title"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Title
        <span
          aria-hidden="true"
          class="pficon pficon-sort-common-asc table-grid-pf-header-sort-arrow"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-6 col-sm-4 col-xs-6"
      id="description"
    >
      Description
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-2 col-sm-2 hidden-xs"
      id="hosts"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Hosts
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-2 col-sm-2 hidden-xs"
      id="clusters"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Clusters
      </button>
    </div>
  </div>
  <div
    class="table-grid-pf-body"
  >
    <div
      style="overflow: visible; width: 0px;"
    >
      <div>
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid ReactVirtualized__List"
          role="grid"
          style="box-sizing: border-box; direction: ltr; height: auto; position: relative; width: 0px; overflow-x: hidden; overflow-y: auto;"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`VirtualTableGrid renders properly 1`] = `
<div
  class="table-grid-pf container-fluid bordered"
  id="virtual-table-grid"
>
  <div
    class="table-grid-pf-head row"
  >
    <div
      class="table-grid-pf-column-header text-nowrap active-sort col-md-2 col-sm-4 col-xs-6"
      id="title"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Title
        <span
          aria-hidden="true"
          class="pficon pficon-sort-common-asc table-grid-pf-header-sort-arrow"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-6 col-sm-4 col-xs-6"
      id="description"
    >
      Description
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-2 col-sm-2 hidden-xs"
      id="hosts"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Hosts
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap col-md-2 col-sm-2 hidden-xs"
      id="clusters"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Clusters
      </button>
    </div>
  </div>
  <div
    class="table-grid-pf-body"
  >
    <div
      style="overflow: visible; width: 0px;"
    >
      <div>
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid ReactVirtualized__List"
          role="grid"
          style="box-sizing: border-box; direction: ltr; height: auto; position: relative; width: 0px; overflow-x: hidden; overflow-y: auto;"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;
